# nhp_data

./: .gitignore  CODEOWNERS  LICENSE  aec_directory.json  check_inpatients_mitigators.py  databricks.yml  day_procedure_code_list.py  generate_aae_ungrouped.py  generate_demographics.py  generate_ecds.py  generate_ecds_ungrouped.py  generate_inpatients.py  generate_inpatients_mitigators.py  generate_main_icb.py  generate_nhp_data.yaml  generate_outpatients.py  generate_provider_successors.py  get_hes_apc.py  hes_datasets.py  nhp_data-ecds.yaml  nhp_data-extract_nhp_for_containers.yaml  nhp_data-inputs.yaml  nhp_data-population_projections.yaml  nhp_data-reference_data.yaml  process_ods.py  pyproject.toml  readme.md  update-sas-tokens.ps1
.github/workflows/: deploy_bundle.yml  linting.yaml
aggregated_data/: ecds.py  outpatients.py
databricks_workflows/: extract_nhp_for_containers.yaml  nhp_data-ecds.yaml  nhp_data-extract_nhp_for_containers.yaml  nhp_data-inpatients.yaml  nhp_data-inputs-lad23cd.yaml  nhp_data-inputs-provider.yaml  nhp_data-inputs.yaml  nhp_data-outpatients.yaml  nhp_data-population_projections.yaml  nhp_data-reference_data.yaml  nhp_data.yaml
datasets/: apc.py  icbs.py  providers.py
default/: apc.py  ecds.py  opa.py
inputs_data/: acute_providers.py  age_sex.py  baseline.py  catchments.py  covid_adjustment.py  diagnoses.py  expat_repat.py  extract.py  helpers.py  inequalities.py  procedures.py  rates.py  wli.py
inputs_data/ae/: __init__.py  baseline.py  covid_adjustment.py  diagnoses.py  expat_repat.py  procedures.py  rates.py
inputs_data/ip/: __init__.py  baseline.py  covid_adjustment.py  diagnoses.py  expat_repat.py  procedures.py  rates.py  wli.py
inputs_data/op/: __init__.py  baseline.py  covid_adjustment.py  diagnoses.py  expat_repat.py  procedures.py  rates.py  wli.py
mitigators/: __init__.py
mitigators/ip/activity_avoidance/: alcohol.py  ambulatory_care_conditions.py  emergency_elderly.py  evidence_based_interventions.py  evidence_based_interventions_general_surgery.py  evidence_based_interventions_gi_surgical.py  evidence_based_interventions_urology.py  evidence_based_interventions_vascular_varicose_veins.py  falls_related_admissions.py  frail_elderly.py  medically_unexplained_related_admissions.py  medicines_related_admissions.py  obesity_related_admissions.py  raid_ae.py  readmission_within_28_days.py  smoking_related_admissions.py  virtual_wards.py  zero_los_no_procedure.py
model_data/: aae.py  birth_factors.py  demographic_factors.py  extract_apc_data.py  extract_birth_factors_data.py  extract_demographic_factors_data.py  extract_ecds_data.py  extract_opa_data.py  helpers.py  ip.py  model_data_extract.py  op.py
model_data/health_status_adjustment/: generate_gams.py  generate_national_gams.py
nhp_datasets/: apc.py  icbs.py  providers.py
population_projections/: get_ons_files_2022.py  npp.py  provider_catchments.py  snpp.py
raw_data/: aae.py  ecds.py  helpers.py  inpatients.py  inpatients_mitigators.py  outpatients.py  outpatients_mitigators.py
raw_data/mitigators/: __init__.py
reference/: day_procedures.py  get_rtt_year_end_incompletes.py  ods_trusts.py  population_by_imd_decile.py  provider_catchments.py  provider_main_icb.py  trust_types.py
reference_data/: day_procedures.json
(+167 files in other folders)
